# SystemInfoDemo

./: .gitignore  CMakeLists.txt  Main.qml  README.md  SystemInfo.qmlproject  SystemInfo.qmlproject.qtds  qmlmodules  sysinfoprovider.cpp  sysinfoprovider.h
SystemInfoContent/: App.qml  CMakeLists.txt  Home.qml  HomeForm.ui.qml  HomeView.qml  HomeViewForm.ui.qml  PerformanceView.qml  PerformanceViewForm.ui.qml  SideBar.qml  SideBarForm.ui.qml
grpc_server/: grpc_server.py  systeminfo_server.py  systeminfo_service_pb2.py  systeminfo_service_pb2.pyi  systeminfo_service_pb2_grpc.py
imports/: CMakeLists.txt
imports/SystemInfoCustom/: CMakeLists.txt  Constants.qml  DirectoryFontLoader.qml  PerfHistoryModel.qml  qmldir
imports/SystemInfoCustom/designer/: plugin.metainfo
imports/SystemInfoCustomControls/: CMakeLists.txt  CustomSwitch.qml  PerformanceChart.qml  SystemElementControl.qml
proto/: systeminfo_service.proto
src/: import_qml_plugins.h  main.cpp
